syntax = "proto3";

package proto_poll;

option go_package = "./protos/gen/poll/;gen";

message Question {
    int64 id = 1;
    string text = 2;
    int64 order = 3;
    string type = 4;
}

message Poll {
    int64 id = 1;
    string header = 2;
    repeated Question questions = 3;
    int64 delay = 4;
    repeated string screen = 5;
}

message GetAllPollsResponse {
    repeated Poll polls = 1;
}

message Answer {
    string type = 1;
    string content = 2;
    int64 question_id = 3;
}

message AddAnswerRequest {
    int64 poll_id = 1;
    int64 user_id = 2;
    repeated Answer answers = 3;
}

message QuestionStarAvg {
    int64 poll_id = 1;
    int64 question_id = 2;
    float average = 3;
}

message QuestionAnswer {
    int64 poll_id = 1;
    int64 question_id = 2;
    string content = 3;
}

message GetStarStatResponse {
    repeated QuestionStarAvg result = 1;
}

message GetAllAnswersResponse {
    repeated QuestionAnswer result = 1;
}

message Empty {}

service PollService {
    rpc GetAllPolls(Empty) returns (GetAllPollsResponse) {}
    rpc AddAnswer(AddAnswerRequest) returns (Empty) {}
    rpc GetAllStarStat(Empty) returns (GetStarStatResponse) {}
    rpc GetAllAnswers(Empty) returns (GetAllAnswersResponse) {}
}
